# evlcharts

./: .gitignore  Makefile  README.md  makeall.sh  pyproject.toml  requirements.txt  rsync.sh
evlcharts/: checksite.py  countynames.py  filterfips.py  loggingargparser.py  maps.py  optimize.py  plot.py  rankbuckets.py  rendersite.py  select.py  topscore.py  variables.py
static-html/css/: evlchart.css
templates/: index.html.j2
working/params/xgb/: xgb-params-13-089.yaml
